fix canvas blurry

--- a/style.css
+++ b/style.css
@@ -8,5 +8,7 @@ canvas{
   position: absolute;
   top: 50%;
   left: 50%;
+  width: min(100vw, 100vh);
+  height: min(100vw, 100vh);
   transform: translate(-50%, -50%);
 }
